Fix header align + PRE text color

--- a/resources/scss/_editor.scss
+++ b/resources/scss/_editor.scss
@@ -1,7 +1,15 @@
+#editor {
+    textarea {
+        color: var(--page-text);
+    }
+}
+
 @include isLaptopOrLarger {
 
     #editor {
-        #btn-edit { display: none; }
+        #btn-edit {
+            display: none;
+        }
     }
 }
 
