--- a/static/main.css
+++ b/static/main.css
@@ -396,7 +396,11 @@ div#background {
   box-shadow: 0 0 2.5rem rgba(30, 60, 30, 0.25);
 }
 #page header {
-  margin: 10em 0 5em 0;
+  text-align: center;
+  margin: 6em 0 5em 0;
+}
+#page header h1, #page header h2 {
+  text-align: center;
 }
 
 #site-menu {
@@ -1970,6 +1974,9 @@ button.feature {
 @media screen and (min-width: 1101px) {
   #editor #btn-edit {
     display: none;
+  }
+  #editor textarea {
+    color: var(--page-text);
   }
 }
 @media screen and (max-width: 1100px) {
